<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/main" 
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="4.3"
        android:orientation="vertical" >

     <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical" />  
        
          <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >  
        
        <TextView
            android:id="@+id/start_item"
            style="@style/MenuFont"
            android:layout_gravity="end"
            android:text="@string/menu_newgame" />

        <TextView
            android:id="@+id/about_item"
            style="@style/MenuFont"
            android:text="@string/menu_about" />

        <TextView
            android:id="@+id/settings_item"
            style="@style/MenuFont"
            android:text="@string/menu_settings" />

        <TextView
            android:id="@+id/exit_item"
            style="@style/MenuFont"
            android:text="@string/menu_exit" />
        
        </LinearLayout>
        
     <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />  
        
    </LinearLayout>

</RelativeLayout>