<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/main_nob" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/back_item"
                style="@style/MenuFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_back"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/save_item"
                style="@style/MenuFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_save"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>