<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_nob" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/txt_about"
            android:autoLink="web" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:textColor="#555"
            android:textSize="14sp"
            android:textColorLink="#555"
            android:text="@string/credits" />
            
        <View
            android:background="#444"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

            <TextView
                android:id="@+id/txt_about_rules"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:linksClickable="false"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </ScrollView>

        <TextView
            android:id="@+id/back_item"
            style="@style/MenuFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/menu_back"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>